<resources>
    <string name="abilita_stampa">Abilita stampa</string>
    <string name="aggiungi">AGGIUNGI</string>
    <string name="aggiungi_immagine">aggiungi\nimmagine</string>
    <string name="aggiungi_video">aggiungi video</string>
    <string name="attenzione">Attenzione!</string>
    <string name="avanti">Avanti</string>
    <string name="bentornato">"Bentornato "</string>
    <string name="cancella_immagine">cancella immagine</string>
    <string name="cancella_la_frase">cancella la frase</string>
    <string name="casuale">Casuale</string>
    <string name="cerca_immagine">cerca\nimmagine</string>
    <string name="cerca_l_immagine_dell_utente">cerca l\'immagine dell\'utente</string>
    <string name="cerca_video">cerca video</string>
    <string name="copyright_information">"\n\nCredits:\nAutore dei pittogrammi: Sergio Palao Origine: ARASAAC (http://arasaac.org) Licenza: CC (BY-NC-SA) Proprietà: Governo di Aragona.\nVerb-data - Una raccolta di verbi e coniugazioni in Formato JSON da utilizzare in un'applicazione mobile. Origine: https://github.com/ian-hamlin/verb-data Licenza: CC (BY-SA).\nGioco pop Balloon - Pop Balloon è un semplice gioco Android. Origine: https://github.com/Vukan-Markovic/Pop_Balloon Licenza: Licenza MIT.\nImmagine utilizzata per il logo dell'app. Origine: https://commons.wikimedia.org/wiki/Category:Swings#/media/File:Myles_Tan_2016-04-16_(Unsplash).jpg"</string>
    <string name="coppie_di_parole">COPPIE DI PAROLE</string>
    <string name="eccezioni_grammaticali">ECCEZIONI GRAMMATICALI</string>
    <string name="descrizione_gioco">descrizione gioco</string>
    <string name="descrizione_immagine_da_inserire">descrizione immagine da inserire</string>
    <string name="descrizione_video_da_inserire">descrizione video da inserire</string>
    <string name="descrizione_video_opzionale">descrizione video (opzionale)</string>
    <string name="disabilita_stampa">Disabilita stampa</string>
    <string name="disabilitata">Disabilitata</string>
    <string name="eccezione_1">eccezione 1</string>
    <string name="eccezione_2">eccezione 2</string>
    <string name="eccezione_3">eccezione 3</string>
    <string name="edit_message">Username</string>
    <string name="esporta_tabelle">ESPORTA TABELLE</string>
    <string name="famiglia">famiglia</string>
    <string name="frase_benvenuto_prima_parte">frase benvenuto prima parte</string>
    <string name="frase_benvenuto_seconda_parte">frase benvenuto seconda parte</string>
    <string name="frase_di_promemoria">frase di promemoria</string>
    <string name="frase_per_la_quale_ricercare_le_immagini">frase per la quale ricercare le immagini</string>
    <string name="icona_del_gioco">icona del gioco</string>
    <string name="immagine_da_inserire">immagine da inserire</string>
    <string name="immagine_dell_utente">immagine dell\'utente</string>
    <string name="frase_nome_da_aggiungere_alla_storia">parola / gruppo di parole da aggiungere alla storia</string>
    <string name="game_settings">IMPOSTAZIONE GIOCHI</string>
    <string name="generali">GENERALI</string>
    <string name="i_tuoi_video">I TUOI VIDEO</string>
    <string name="id_pittogramma">id pittogramma</string>
    <string name="il_tuo_account">IL TUO ACCOUNT</string>
    <string name="importa">IMPORTA</string>
    <string name="importa_tabelle">IMPORTA TABELLE</string>
    <string name="impostazione_dei_contenuti">IMPOSTAZIONE CONTENUTI</string>
    <string name="impostazione_dei_giochi">IMPOSTAZIONE GIOCHI</string>
    <string name="impostazioni">IMPOSTAZIONI</string>
    <string name="impostazioni_avanzate">IMPOSTAZIONI AVANZATE</string>
    <string name="impostazioni_data_import">IMPOSTAZIONI DATA IMPORT</string>
    <string name="impostazioni_generali">IMPOSTAZIONI GENERALI</string>
    <string name="impostazioni_wordpairs">IMPOSTAZIONI WORDPAIRS</string>
    <string name="info">info</string>
    <string name="information_this_app_was_created_by">\n\nInformazioni: \nQuesta app è stata creata da Renzo Sampietro ed è un\'app di CAA progettata per realizzare schede di comunicazione per qualsiasi utilizzo.\nSe desideri contattarmi per saperne di più in merito a qualsiasi questione ad essa relativa, puoi inviare un\'e-mail a sampietro.naiveaac@gmail.com</string>
    <string name="informazioni_sullo_sviluppatore">INFORMAZIONI SULLO SVILUPPATORE</string>
    <string name="inizia">inizia</string>
    <string name="inizia_a_parlare">inizia a parlare</string>
    <string name="inizia_il_discorso">inizia il discorso</string>
    <string name="inserisci_il_risultato_per_verificare_che_sei_un_adulto">inserisci il risultato per verificare che sei un adulto</string>
    <string name="io">io</string>
    <string name="le_tue_immagini">LE TUE IMMAGINI</string>
    <string name="link_youtube">link Youtube</string>
    <string name="lista_di_nomi">LISTA DI NOMI</string>
    <string name="media_settings">IMPOSTAZIONE MEDIA</string>
    <string name="modalita_elenco">Modalità Elenco</string>
    <string name="mostra_elenco">mostra elenco</string>
    <string name="naive_aac_manuale_istruzioni_pdf">naive aac manuale istruzioni.pdf</string>
    <string name="nessuna">nessuna</string>
    <string name="nome_da_aggiungere_alla_lista">nome da aggiungere alla lista</string>
    <string name="nome_storia">nome storia</string>
    <string name="numero_frase">numero frase</string>
    <string name="numero_parola">numero parola / gruppo di parole</string>
    <string name="occorre_installare_un_lettore_pdf_da_play_store">Occorre installare un lettore PDF da Play Store</string>
    <string name="ordinato">Ordinato</string>
    <string name="parametri_dei_giochi">PARAMETRI DEI GIOCHI</string>
    <string name="parola_chiave">parola chiave</string>
    <string name="passa_alla_composizione_di_una_nuova_frase">passa alla composizione di una nuova frase</string>
    <string name="percentuale_errori_consentita">percentuale errori consentita</string>
    <string name="pittogrammi_da_modificare">PITTOGRAMMI DA MODIFICARE</string>
    <string name="plurale_frase_di_promemoria">plurale frase di promemoria</string>
    <string name="preposizione_seconda_parola_complemento">preposizione seconda parola / complemento</string>
    <string name="prima_con_seconda_parola">prima con seconda parola</string>
    <string name="prima_parola">prima parola</string>
    <string name="risultato">risultato</string>
    <string name="salva">SALVA</string>
    <string name="salva_i_dati_dell_utente">salva i dati dell\'utente</string>
    <string name="save_account">salva utente</string>
    <string name="scegli_il_gioco_da_impostare">Scegli il gioco da impostare</string>
    <string name="search_image">cerca immagine</string>
</resources>