<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sampietro.NaiveAAC.activities.Settings.SettingsActivity">

    <TextView
        android:id="@+id/generalsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:text="@string/impostazioni_generali"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <RadioGroup
            android:id="@+id/enableprintingradiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generalsettings"
            app:layout_constraintVertical_bias="0.069">
            <RadioButton android:id="@+id/enableprinting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abilita_stampa"
                android:onClick="PrintingRadioButtonClicked"/>
            <RadioButton android:id="@+id/disableprinting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disabilita_stampa"
                android:onClick="PrintingRadioButtonClicked"/>
        </RadioGroup>

    <TextView
        android:id="@+id/listmodetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:text="@string/modalita_elenco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enableprintingradiogroup" />


    <RadioGroup
        android:id="@+id/listmoderadiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listmodetv"
        app:layout_constraintVertical_bias="0.069">
        <RadioButton android:id="@+id/disablelistmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabilitata"
            android:onClick="listModeRadioButtonClicked"/>
        <RadioButton android:id="@+id/enablesortedlistmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordinato"
            android:onClick="listModeRadioButtonClicked"/>
        <RadioButton android:id="@+id/enablerandomlistmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casuale"
            android:onClick="listModeRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/allowedmarginoferrorLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listmoderadiogroup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/percentuale_errori_consentita" />

        <EditText
            android:id="@+id/allowedmarginoferror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="number"
            android:autofillHints="@string/percentuale_errori_consentita" />
    </LinearLayout>


    <Button
        android:id="@+id/generalsettingssave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allowedmarginoferrorLL"
        android:onClick="generalSettingsSave"
        android:text="@string/salva" />

</androidx.constraintlayout.widget.ConstraintLayout>