<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Settings.SettingsActivity">

    <TextView
        android:id="@+id/gamessettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:text="@string/impostazione_dei_giochi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/gametosetlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="20dp"
        android:text="@string/scegli_il_gioco_da_impostare"
        app:layout_constraintStart_toStartOf="@+id/gamessettings"
        app:layout_constraintTop_toBottomOf="@+id/gamessettings" />

    <Spinner
        android:id="@+id/gametoset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gametosetlist"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/gametosetlist"
        app:layout_constraintTop_toBottomOf="@+id/gametosetlist"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="48dp"
        android:onClick="goToGameToSet"
        android:text="@string/avanti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gametoset" />


</androidx.constraintlayout.widget.ConstraintLayout>