<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sampietro.NaiveAAC.activities.Settings.SettingsMediaActivity">

        <LinearLayout
            android:id="@+id/videoDescriptionLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/descrizione_video_da_inserire" />

            <EditText
                android:id="@+id/videoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/nessuna"
                android:inputType="text"
                android:autofillHints="@string/descrizione_video_da_inserire" />

        </LinearLayout>

    <SurfaceView
        android:id="@+id/surfView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoDescriptionLL" />

    <Button
        android:id="@+id/videosearchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:onClick="videoSearch"
        android:text="@string/cerca_video"
        app:layout_constraintEnd_toStartOf="@+id/videoaddbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfView" />

    <Button
        android:id="@+id/videoaddbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:onClick="videoAdd"
        android:text="@string/aggiungi_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/videosearchbutton"
        app:layout_constraintTop_toBottomOf="@+id/surfView" />

    <Button
        android:id="@+id/videolistbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:onClick="videosList"
        android:text="@string/mostra_elenco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videosearchbutton"/>

</androidx.constraintlayout.widget.ConstraintLayout>